added skilld section in the resume

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="header-tops">
+  <header id="header" class="header-tops" >
     <div class="container">
 
       <h1><a href="index.html">Rogers Ntumwa</a></h1>
@@ -218,6 +218,18 @@
             </p>
           </div>
 
+          <h3 class="resume-title">Skills</h3>
+          <div class="resume-item">
+            <ul>
+              <li>Html/css</li>
+              <li>JavaScript</li>
+              <li>Python</li>
+              <li>Node js/Express.</li>
+              <li>Django/Django-Rest-framework</li>
+              <li>Sass</li>
+              <li>Git</li>
+            </ul>
+          </div>
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
             <h4>Higher Diploma in Software Engineering</h4>
