removed bagtracker app

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           <div class="resume-item pb-0">
             <h4>Rogers Ntumwa</h4>
             <p><em>Creative developer dedicated to developing and optimizing interactive, use-friendly and feature rich
-                web applications. Leverage and analytical skills and strong attension to details in order to deliver
+                web applications. Strong attension to details in order to deliver
                 efficient solutions, build software from planning to deployment using the best effective development
                 practices like DRY priciple and unit testing.</em>
             </p>
@@ -337,7 +337,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/BugTrucker.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -351,7 +351,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
