--- a/index.html
+++ b/index.html
@@ -418,21 +418,21 @@
           </div>
         </div> -->
 
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Guesinggame.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Card 3</h4>
               <p>Card</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
-                  class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/Guesinggame.PNG" data-gall="portfolioGallery" class="venobox" title="Web 3"><i
+                    class="bx bx-notepad"></i></a>
+                <a href="https://guesing-game.netlify.app/" target="_blank"><i class="bx bx-globe"></i></a>
+                <a href="https://github.com/RogersNtumwa/Guesing-Game" target="_blank"><i class="bx bx-git-repo-forked"></i></a>
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
